add first page in index.html

--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -9,7 +9,34 @@
         <title>Document</title>
     </head>
     <body>
-        <div class="page"></div>
+        <div class="page">
+            <a href="#" class="logo"><img src="../images/logo.svg" alt="logo"></a>
+            <h1 class="title">Два варианта расчета стоимости системы отопления на сжиженном газе</h1>
+            <p class="text">Добрый день, Константин.</p>
+            <p class="text">Спасибо вам за проявленный интерес в услугах компании Intergaz. Предо- ставляем вам рассчеты по стоимости отопления на газе на основе данных, которые вы заполнили на нашем сайте.</p>
+            <p class="text">Компания Intergaz предлагает два варианта приобретения системы отопле- ния на сжиженном газе. Цена зависит от выбранного вами варианта.</p>
 
+            <div class="object">
+                <h2 class="object__title">Данные объекта</h2>
+                <div class="object__row">
+                    <div class="object__param">Адрес объекта</div>
+                    <div class="object__text">Krišjāņa Barona iela 3–6b, Rīga, LV‑1050</div>
+                </div>
+                <div class="object__row">
+                    <div class="object__param">Отапливаемая площадь</div>
+                    <div class="object__text">250 м²</div>
+                </div>
+                <div class="object__row">
+                    <div class="object__param">Планируемые расходы на отопление*</div>
+                    <div class="object__text">1375 € в год или 127 € в месяц</div>
+                </div>
+            </div>
+
+            <div class="note">* Планируемые расходы на отопление рассчитаны на основе стоимости сжиженного газа на 25.04.2018. Стоимость планируемых расходов на отопление в месяц рассчитаны исходя из выровненного платежа.</div>
+            <div class="footer">
+                <div class="footer__page">1</div>
+                <a href="#" class="footer__link">www.intergaz.lv</a>
+            </div>
+        </div>
     </body>
 </html>
