--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -35,7 +35,96 @@
             <div class="note">* Планируемые расходы на отопление рассчитаны на основе стоимости сжиженного газа на 25.04.2018. Стоимость планируемых расходов на отопление в месяц рассчитаны исходя из выровненного платежа.</div>
             <div class="footer">
                 <div class="footer__page">1</div>
-                <a href="#" class="footer__link">www.intergaz.lv</a>
+                <a href="https://mans.intergaz.lv/" class="footer__link">www.intergaz.lv</a>
+            </div>
+        </div>
+        <div class="page">
+            <h1 class="title title_center">Варианты приобретения системы отопления</h1>
+            <div class="variant">
+                <h2 class="variant__title">Вариант 1</h2>
+                <div class="variant__subtitle">Передача в пользование системы газоснабжения</div>
+                <div class="variant__row">
+                    <div class="variant__price">55 €
+                        <span>в месяц</span>
+                    </div>
+                    <div class="variant__text">В данном варианте сотрудничества, компания Intergaz предоставляет вам в пользование систему отопления за ежемесячную абонентскую плату.</div>
+                </div>
+            </div>
+            <div class="pay">
+                <div class="pay-item">
+                    <div class="pay-item__title">Абонентская плата включает в себя:</div>
+                    <div class="pay-item__text">Плату за пользование наружной системы газоснабжения.</div>
+                    <div class="pay-item__text">Обязательное ежегодное техническое обслуживание системы газоснабжения и газовой емкости (обычная цена: 120 €).</div>
+                    <div class="pay-item__text">Систему телеметрии и газовый счетчик. Система теле- метрии позволяет следить за остатками газа в газовой емкости через удобный портал
+                        <a href="https://mans.intergaz.lv/">mans.intergaz.lv</a>. Газо- вый счетчик позволяет использовать удобные вариан- ты оплаты за газ, такие как:
+                        <a href="#">выровненный платеж</a>
+                        или
+                        <a href="#">оплата газа по факту потребления</a>, стр. 4.
+                    </div>
+                </div>
+                <div class="pay-item">
+                    <div class="pay-item__title">Абонентская плата не включает в себя:</div>
+                    <div class="pay-item__text">Стоимость внутреннего газопровода (газопровод, который находится внутри вашего дома).</div>
+                    <div class="pay-item__text">Стоимость проекта. От 280 €.</div>
+                    <div class="pay-item__text">Стоимость земляных работ. При установке подземной газовой емкости потребуется вырыть котлован и тран- шею от газовой емкости до газифицируемого объекта. Для наземной емкости требуется только траншея от га- зовой емкости до газифицируемого объекта.</div>
+                </div>
+            </div>
+            <div class="footer">
+                <div class="footer__page">2</div>
+                <a href="https://mans.intergaz.lv/" class="footer__link">www.intergaz.lv</a>
+            </div>
+        </div>
+        <div class="page">
+            <div class="variant">
+                <h2 class="variant__title">Вариант 2</h2>
+                <div class="variant__subtitle">Покупка системы газоснабжения</div>
+                <div class="variant__row">
+                    <div class="variant__price variant__price_second">
+                        <span>от</span>
+                        3800<span class="star">*</span>
+                        €
+                    </div>
+                    <div class="variant__text variant__text_second">В данном варианте сотрудничества, вы приобретаете систему отопления в свою собственность на основании рассчитанной сметы.</div>
+                </div>
+            </div>
+            <h3 class="position-title">Система отопления состоит из следующих позиций:</h3>
+            <div class="positions">
+                <div class="position">
+                    <div class="position__count">01</div>
+                    <div class="position__text">Газовая емкость (наземная или подземная)</div>
+                </div>
+                <div class="position">
+                    <div class="position__count">02</div>
+                    <div class="position__text">Наружный газопровод</div>
+                </div>
+                <div class="position">
+                    <div class="position__count">03</div>
+                    <div class="position__text">Внутренний газопровод</div>
+                </div>
+                <div class="position">
+                    <div class="position__count">04</div>
+                    <div class="position__text">Изготовление проекта</div>
+                </div>
+                <div class="position position_without-border">
+                    <div class="position__count">05</div>
+                    <div class="position__text">Земельные работы</div>
+                </div>
+            </div>
+            <div class="images">
+                <div class="image">
+                    <img src="../images/img1.jpg" alt="intergaz">
+                    <div class="image__text">Система газоснабжения с надземной газовой емкостью</div>
+                </div>
+                <div class="image">
+                    <img src="../images/img2.jpg" alt="intergaz">
+                    <div class="image__text">Система газоснабжения с подземной газовой емкостью</div>
+                </div>
+            </div>
+
+            <div class="note">* Базовая цена системы отопления с газовой емкостью. Окончательная сумма системы отопления с газовой емкостью расчитывается индивидуально. Указанная базовая цена не включает в себя стоимость разработки проекта, земельных работ, газового счётчика и системы телеметрии. Дополнительно вам понадобится заключить договор на техническое обслуживание системы отопления и газовой емкости. Стоимость технического обслуживания 110 € в год.</div>
+            <div class="footer">
+                <div class="footer__page">3</div>
+                <a href="https://mans.intergaz.lv/" class="footer__link">www.intergaz.lv</a>
             </div>
         </div>
     </body>
