--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -127,5 +127,35 @@
                 <a href="https://mans.intergaz.lv/" class="footer__link">www.intergaz.lv</a>
             </div>
         </div>
+        <div class="page">
+            <h1 class="title title_center">Варианты оплаты за газ</h1>
+            <div class="grey-rect">
+                <h3 class="title_blue">Оплата газа по счетчику</h3>
+                <div class="subtitle_small"></div>
+                <div class="type">
+                    <div class="type__count">1</div>
+                    <div class="type__text">
+                        <b>Выровненный платеж</b>* — это форма расчета, при которой клиент ежемесячно платит одинаковую сумму. Платеж рассчитывается индивидуально для каждого клиента в зависимости от среднего потребления сжиженного газа за год.</div>
+                </div>
+                <div class="type">
+                    <div class="type__count">2</div>
+                    <div class="type__text">
+                        <b>Оплата по факту потребления</b>
+                        — это форма расчета, при которой клиент оплачивает потребленное количество сжиженного газа за предыдущий месяц.</div>
+                </div>
+                <div class="type-row">
+                    <img class="type-img" src="../images/type-img.jpg" alt="">
+                    <span class="note_second">Выровненный платеж и оплата по факту потребления доступны клиентам, у которых установлен газовый счетчик.</span>
+                </div>
+            </div>
+            <div class="grey-rect">
+                <h3 class="title_blue">Предоплата</h3>
+                <div class="text-with-border">Форма расчета, при которой клиент оплачивает полную сумму заказа.</div>
+            </div>
+            <div class="footer">
+                <div class="footer__page">4</div>
+                <a href="https://mans.intergaz.lv/" class="footer__link">www.intergaz.lv</a>
+            </div>
+        </div>
     </body>
 </html>
