--- a/src/templates/index.html
+++ b/src/templates/index.html
@@ -157,5 +157,81 @@
                 <a href="https://mans.intergaz.lv/" class="footer__link">www.intergaz.lv</a>
             </div>
         </div>
+        <div class="page">
+            <h1 class="title_center">Почему Intergaz?</h1>
+            <div class="advantages">
+                <div class="advantage">
+                    <div class="advantage__icon">
+                        <img src="../images/icon-1.png" alt="icon">
+                    </div>
+                    <div class="advantage__title">Колоссальный опыт</div>
+                    <div class="advantage__text">За 18 лет компания Intergaz реализовала более 3785 систем автономного газоснабжения — от част- ных домов, коттеджных поселков до крупных про- изводственных объектов. Среди клиентов Intergaz такие компании, как Piebalgas Alus, Pure Chocolate, Balticovo и многие другие.</div>
+                </div>
+                <div class="advantage">
+                    <div class="advantage__icon">
+                        <img src="../images/icon-2.png" alt="icon">
+                    </div>
+                    <div class="advantage__title">Собственные монтажные бригады</div>
+                    <div class="advantage__text">Квалифицированные специалисты компании Intergaz выполняют весь комплекс работ по мон- тажу, пусконаладке и сервисному обслуживанию систем отопления на сжиженном газе.</div>
+                </div>
+                <div class="advantage">
+                    <div class="advantage__icon">
+                        <img src="../images/icon-3.png" alt="icon">
+                    </div>
+                    <div class="advantage__title">Не зависим от посредников</div>
+                    <div class="advantage__text">Имеем собственный газовый терминал, складской комплекс, квалифицированный штат сотрудников и полный набор необходимого оборудования для монтажа систем отопления на сжиженном газе по всей Латвии.</div>
+                </div>
+                <div class="advantage">
+                    <div class="advantage__icon">
+                        <img src="../images/icon-4.png" alt="icon">
+                    </div>
+                    <div class="advantage__title">Работаем по всей Латвии</div>
+                    <div class="advantage__text">Устанавливаем системы отопления на сжиженном газе в любой, даже самой труднодоступной точке Латвии.</div>
+                </div>
+            </div>
+            <h3 class="position-title">Видео отзывы клиентов</h3>
+            <div class="reviews">
+                <div class="review">
+                    <div class="review__video">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/XTv1iWCKAJc?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
+                    </div>
+                    <div class="review__title">
+                        <span>Sergejs Maslakovs</span>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="review__video">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/BmrpEXLyrGs?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
+                    </div>
+                    <div class="review__title">
+                        <span>Vladimir Sautkin</span>
+                    </div>
+                </div>
+                <div class="review">
+                    <div class="review__video">
+                        <iframe width="560" height="315" src="https://www.youtube.com/embed/_oVS2udFmwA?showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen="allowfullscreen"></iframe>
+                    </div>
+                    <div class="review__title">
+                        <span>Jurijs Mokhovs</span>
+                    </div>
+                </div>
+            </div>
+            <div class="main-footer">
+                <div class="manager">
+                    <img src="../images/manager.png" alt="Boris" class="manager__face">
+                    <div class="manager__title">Ваш менеджер</div>
+                    <div class="manager__name">Борис Бескинс</div>
+                    <div class="contacts">
+                        <div class="contacts__phone">Телефон:
+                            <span>1804</span></div>
+                        <div class="contacts__mail">
+                            Почта:
+                            <a href="mailto:ig@intergaz.lv">ig@intergaz.lv</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="main-footer__text">Закажите бесплатную консультацию. Специалист приедет к вам в удобное время, ответит на все ваши вопросы и покажет где на вашем участке можно разместить емкость для хранения сжи- женного газа.</div>
+            </div>
+        </div>
     </body>
 </html>
